--- a/config/crd/kustomizeconfig.yaml
+++ b/config/crd/kustomizeconfig.yaml
@@ -2,6 +2,8 @@
 nameReference:
 - kind: Service
   version: v1
+  spec:
+    type: LoadBalancer
   fieldSpecs:
   - kind: CustomResourceDefinition
     group: apiextensions.k8s.io
